<resources>
    <string name="app_name">HolaMundo</string>
    <string name="textViewLove">Me gusta PMDM</string>
    <!--    Actividad Bomba digital-->
    <string name="tVTitulo">Bomba digital</string>
    <string name="tVDescripcion">Por lo general, varias personas pueden jugar al minijuego de la bomba digital.
        Las reglas del juego también son muy sencillas: Un número aleatorio entre 0 y 100 como "bomba".
        \nTodos se turnan para adivinar y el rango de números sigue reduciéndose hasta que alguien "pisa la bomba " .</string>
    <string name="btReiniciar">Reiniciar</string>
    <string name="btCancelar">Cancelar</string>
    <string name="btConfirmar">Confirmar</string>
    <string name="tVResultado">0 &#8211; 100</string>
    <string name="tV_introducir_numero">Introducir numero</string>
    <string name="tVPisaBomba">Has pisado BOMBA!!!</string>

    <!--Coloneitor-->
    <string name="mostrar">Mostrar</string>
    <string name="nombre_color">Nombre Color</string>
    <string name="texto_blanco">Texto Blanco</string>
    <string name="siuuuuu">Siuuuuu!!!</string>
    <string name="rojo">R</string>
    <string name="verde">G</string>
    <string name="azul">B</string>
    <string name="valor_color_defecto"> 0 </string>
    <string name="malo">Malo</string>
    <string name="excelente">Excelente</string>
    <string name="bueno">Bueno</string>
    <string name="calcular">Calcular</string>
    <string name="Nombre_local">Hotel Four Seasons</string>
    <string name="introducir_dni">Introducir</string>
    <string name="Hint_fecha">FECHA</string>
    <string name="Hint_hora">HORA</string>
    <string name="Mensaje_cita">Su cita se ha guardado satisfactoriamente</string>
    <string name="tV_dni">DNI :</string>
    <string name="horario_local">Horario \nL &#8211; V \t09:00 &#8211; 14:00</string>

    <!--Juego piedra papel tijera-->
    <string name="u2a6_cambiar_aspecto">Cambiar\n Aspecto</string>
    <string name="u2a6_papel">Papel</string>
    <string name="u2a6_piedra">Piedra</string>
    <string name="u2a6_tijera">Tijera</string>
    <string name="u2a6_mensaje_Global">"Has elegido : "</string>
    <string name="u2a6_mensaje_opcion_jugador">Has elegido : %s</string>
    <string name="u2a6_mensaje_bot">Bot ya ha elegido.</string>
    <string name="u2a6_mensaje_opcion_bot">Bot ha eligido : %s</string>
    <string name="u2a6_botName">Bot</string>
    <string name="u2a6_nombre_jugador">Jugador</string>
    <string name="u2a6_ronda">Ronda</string>
    <string name="u2a6_ronda_siguiente">Ronda %d</string>
    <string name="u2a6_ronda_empate">Empate</string>
    <string name="u2a6_ronda_ganado">¡Ganaste!</string>
    <string name="u2a6_ronda_perdido">¡Bot gana!</string>
    <string name="u2a6_fin_de_juego_ganado">Fin de Juego.\nHas ganado!!!</string>
    <string name="u2a6_fin_de_juego_perdido">Fin de Juego.\nHas perdido!!!</string>
    <string name="u2a6_titulo_dialogo_reiniciar">Importante</string>
    <string name="u2a6_mensaje_dialogo_reiniciar">La partida no ha terminado todavía ,¿ Seguro quieres reiniciar ?</string>

    <!--Calculadora simple-->
    <string name="u3a2_insertar_numero">Insertar Numero</string>
    <string name="u3a2_Dividir">/</string>
    <string name="u3a2_Multiplicar">*</string>
    <string name="u3a2_Restar">-</string>
    <string name="u3a2_titulo">Calculadora Simple</string>
    <string name="u3a2_volver">Volver</string>
    <string name="u3a2_resultado_indefinido">Resultado indefinido</string>
    <string name="u3a2_no_se_puede_dividir_entre_cero">No se puede dividir entre cero</string>
    <string name="u3a2_resultado">%.2f</string>
    <string name="u3a2_mensaje_error">Error los campos estan incompleto!!!</string>
    <string name="u3a2_Sumar">+</string>

    <!--Heladotron-->
    <string name="u3a3_cantidad_pedido">%d</string>
    <string name="u3a3_error_cantidad_0">Error cantidad 0!!!</string>

    <!--Fibonacci-->
    <string name="u3a5_valor_uno">1</string>
    <string name="finalizar">Finalizar</string>
    <string name="analizar">Analizar</string>
    <string name="introducir_el_texto">Introducir el texto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>