<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".u2e5.PedirCita">

    <TextView
        android:id="@+id/u2a5tViewNombreEmpresa"
        android:layout_width="252dp"
        android:layout_height="41dp"
        android:text="@string/Nombre_local"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/u2a5iViewIcono"
        android:layout_width="100dp"
        android:layout_height="122dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="35dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/hotel" />

    <TextView
        android:id="@+id/u2a5tViewHorario"
        android:layout_width="230dp"
        android:layout_height="75dp"
        android:text="@string/horario_local"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <EditText
        android:id="@+id/u2a5eTextDNI"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/introducir_dni"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        android:autofillHints="" />

    <TextView
        android:id="@+id/u2a5tViewDni"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:text="@string/tV_dni"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/u2a5eTextDNI"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <EditText
        android:id="@+id/u2a5eTextDate"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/Hint_fecha"
        android:inputType="date"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        tools:text="@tools:sample/date/ddmmyy"
        android:autofillHints="" />

    <EditText
        android:id="@+id/u2a5eTextTime"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/Hint_hora"
        android:inputType="time"
        android:textAlignment="center"
        android:textColorHint="#A1887F"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544"
        android:autofillHints="" />

    <Button
        android:id="@+id/u2a5buttonConfirmar"
        android:layout_width="219dp"
        android:layout_height="140dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="469dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="122dp"
        android:text="@string/btConfirmar"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/u2a5iViewComprobar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344"
        app:srcCompat="@drawable/comprobado"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/u2a5tVSalida"
        android:layout_width="409dp"
        android:layout_height="220dp"
        android:text="@string/Mensaje_cita"
        android:textAlignment="center"
        android:textSize="48sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

</androidx.constraintlayout.widget.ConstraintLayout>