<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".u2e2.u2a2Coloneitor">

    <TextView
        android:id="@+id/u2a2tVSalida"
        android:layout_width="314dp"
        android:layout_height="167dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2a2btMostrar" />

    <EditText
        android:id="@+id/u2a2eTNombreColor"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="635dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_color"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/u2a2sBAzul"
        android:layout_width="246dp"
        android:layout_height="33dp"
        android:max="255"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <SeekBar
        android:id="@+id/u2a2sBRojo"
        android:layout_width="246dp"
        android:layout_height="33dp"
        android:max="255"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/u2a2tVVerde"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:text="@string/verde"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/u2a2sBVerde"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/u2a2tVAzul"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/azul"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/u2a2sBAzul"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2a2tVVerde"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <SeekBar
        android:id="@+id/u2a2sBVerde"
        android:layout_width="246dp"
        android:layout_height="33dp"
        android:layout_marginEnd="56dp"
        android:max="255"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/u2a2tVRojo"
        android:layout_width="65dp"
        android:layout_height="33dp"
        android:text="@string/rojo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/u2a2tVVerde"
        app:layout_constraintEnd_toStartOf="@+id/u2a2sBRojo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <Button
        android:id="@+id/u2a2btMostrar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="166dp"
        android:text="@string/mostrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <Switch
        android:id="@+id/u2a2sTextoBlanco"
        android:layout_width="189dp"
        android:layout_height="57dp"
        android:checked="true"
        android:text="@string/texto_blanco"
        android:textAlignment="center"
        android:textOn="@string/siuuuuu"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>